Added /Images & organized folder structure

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <title>Sunrise Animation</title>
-  <script src="p5.min.js"></script>
+  <script src="Libraries/p5.min.js"></script>
   <!--<link rel="stylesheet" type="text/css" href="style.css">-->
 </head>
 
 <body style="background-color: antiquewhite; padding-left: 5rem;">
   <h1>Move mouse left and right to control sunrise/sunset!</h1>
-  <script src="sketch.js"></script>
+  <script src="Assets/sketch.js"></script>
 </body>
 
 </html>
