--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="background-color: antiquewhite; padding-left: 5rem;">
   <h1>Move mouse left and right to control sunrise/sunset!</h1>
-  <script src="Assets/sketch.js"></script>
+  <script src="Assets/JS/sketch.js"></script>
 </body>
 
 </html>
